# SP

./: .gitignore  README.md  pyproject.toml
src/: decorators.py  generators.py  masks.py  processing.py  widget.py
tests/: test_decorators.py  test_def.py  test_generators.py  tests_def.py
